--- a/src/index.css
+++ b/src/index.css
@@ -357,17 +357,24 @@ a:hover {
 }
 
 .albumPicture {
-  
 }
 
 /*  FOOTER */
 .footer {
   position: sticky;
   bottom: 0;
-  background-color: #282828;
+  background-color: #333333;
   color: white;
-  text-align: center;
-  line-height: 100px;
+  /* text-align: center; */
+  /* line-height: 100px; */
   height: 91px;
   border-top: 0.5px solid black;
+}
+.ThumnailImage {
+  width: 90px;
+  height: auto;
+}
+.albumTitleThumb {
+  font-size: 12px;
+  font-weight: 500;
 }
